# ETHRoomAllocation

./: .flake8  .gitignore  .pylintrc  README.md  __init__.ipynb  app.py  main.ipynb  process.ipynb  pyproject.toml  room_information.csv  scraper.py  test.ipynb
.github/workflows/: github-actions.yml
eth_room_allocation/eth/: session.py
eth_room_allocation/experimenting/: experiment01.ipynb
eth_room_allocation/scraper/: __init__.py  main.py
eth_tools/: scraper.py  settings.py
eth_tools/eth_requests/: __init__.py
eth_tools/mensa_recommender/: scraper.py
eth_tools/requests/: session.py  settings.py
eth_tools/room_allocation/: __init__.py  fix_scores.py  room.py  run.py  scraper.py
samples/: CAB_G_56.json  ROOM_INFO.json
templates/: home.html
tests/: test_dummy.py  test_room.py  test_scraper.py
