[tool.poetry]
name = "eth-tools"
version = "0.1.0"
description = ""
authors = [
  "Max Kieffer <maxkieffer@icloud.com>, Alex Thillen <alexthillen852@gmail.com>",
]
readme = "README.md"
packages = [{ include = "eth_tools" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
flask = "^2.3.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
flake8 = "^6.1.0"
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
